--- a/index.html
+++ b/index.html
@@ -2,15 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>News channel</title>
+    <title>News App</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <nav>
       <div class="main-nav container flex">
         <a href="#" onclick="reload()" class="company-logo">
-          <!-- <img src="./assets/logo.png" alt="company logo" />   -->
+          <!-- <img src="./assets/logo.png" alt="company logo" /> -->
         </a>
         <div class="nav-links">
           <ul class="flex">
@@ -19,7 +20,7 @@
               id="ipl"
               onclick="onNavItemClick('ipl')"
             >
-              cricket
+              IPL
             </li>
             <li
               class="hover-link nav-item"
@@ -73,6 +74,8 @@
         </div>
       </div>
     </template>
+
     <script src="script.js"></script>
   </body>
 </html>
+ 
